--- a/标签管理.html
+++ b/标签管理.html
@@ -308,7 +308,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u3057" class="ax_default table_cell">
-                <img id="u3057_img" class="img " src="images/____-native/u2671.png"/>
+                <img id="u3057_img" class="img " src="images/记录结果/u2671.png"/>
                 <div id="u3057_text" class="text ">
                   <p><span>标签用途</span></p>
                 </div>
