--- a/版本管理.html
+++ b/版本管理.html
@@ -330,7 +330,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u3797" class="ax_default table_cell">
-                <img id="u3797_img" class="img " src="images/____-native/u2671.png"/>
+                <img id="u3797_img" class="img " src="images/记录结果/u2671.png"/>
                 <div id="u3797_text" class="text ">
                   <p><span>版本号</span></p>
                 </div>
