--- a/模块管理.html
+++ b/模块管理.html
@@ -308,7 +308,7 @@
 
               <!-- Unnamed (单元格) -->
               <div id="u3384" class="ax_default table_cell">
-                <img id="u3384_img" class="img " src="images/____-native/u2671.png"/>
+                <img id="u3384_img" class="img " src="images/记录结果/u2671.png"/>
                 <div id="u3384_text" class="text ">
                   <p><span>模块</span></p>
                 </div>
